--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm -f build/* && webpack --progress -d && cp web/index.css build/ && cp web/index.html build/ && PORT=8080 node index.js",
+    "start": "rm -f build/* && webpack --progress -d && cp web/index.css build/ && cp web/index.html build/ && PORT=9090 node index.js",
     "make": "rm -f build/* && NODE_ENV=production webpack -p --progress && cp web/index.css build/ && cp web/index.html build/"
   },
   "author": "ByzantineFailure <byzanitnefailure@gmail.com>",
@@ -14,6 +14,7 @@
     "express": "~4.13.4",
     "express-session": "^1.15.2",
     "express-ws": "~1.0.0",
+    "highcharts": "^5.0.11",
     "node-uuid": "~1.4.7",
     "oauth": "^0.9.15",
     "twitter": "~1.2.5",
